--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=<>, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 
 <body style="background-color: black; color: white;">
-    <div>
-        MANOJ
-    </div>
+
+    
     <h1 style="text-align: center;">MY FAVOURITE BLOG</h1>
 
     <div style="display: flex; justify-content: space-between;">
@@ -44,10 +43,10 @@
                     <button style="background-color: green;">MY PROFILE</button>
                 </div>
             </div>
-           
 
 
-            </div>
+
+        </div>
 </body>
 
 </html>
